fix gap

--- a/HTML-CSS/week02/style.css
+++ b/HTML-CSS/week02/style.css
@@ -42,6 +42,7 @@ li{
 	border-radius: 0.75rem;
 	box-shadow: 0.4rem 0.4rem 20px rgba(0, 0, 0, 0.1);
 	transition-duration: 1s;
+	
 }
 .grid-item:hover{
 	box-shadow: 0.1rem 0.1rem 5px 6px rgba(204, 204, 153, 0.4);
@@ -96,9 +97,7 @@ li{
 	flex-direction: column;
 	gap: 1rem;
 }
-#grid-flex > .grid-item{
-	margin-bottom: 2vw;
-}
+
 
 
 /* Phone */ 
@@ -202,11 +201,11 @@ li{
 		/*Flex*/
 		#grid-flex {
 			justify-content: space-between;
-			gap: 0;
+			
 		}
 		#grid-flex > .grid-item:first-child, 
 		#grid-flex > .grid-item:nth-child(2) {
-		width: 49%;
+			width: 48%;
 		}
 		#grid-flex > .grid-item {
 			width: 31%;}
@@ -263,10 +262,15 @@ html{
 #grid-flex > .grid-item:nth-child(2)
 {
 	width: 23%;
-	margin-bottom: 2vw;
+	
 }
 #grid-flex > .grid-item:first-child{
 	width: 48.5%;
 }
 } 
-
+@media (min-width:1200px)  { 
+	body{
+		max-width: 1920px;
+		margin: 0 auto;
+	}
+}
